--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
     <div class="container">
+        <>hello world
         <div class="row">&nbsp;</div>
         <div class="row">
             <div class="col-2">User</div>
