--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
     <div class="container">
-        <>hello world
+        <p align="center"><font color="red" size="7">Hello World</font></p>
         <div class="row">&nbsp;</div>
         <div class="row">
             <div class="col-2">User</div>
