--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -3,7 +3,7 @@
         <p align="center"><font color="red" size="7">Hello World</font></p>
         <div class="row">&nbsp;</div>
         <div class="row">
-            <div class="col-2">User</div>
+            <div class="col-2">User Name:</div>
             <div class="col-4"><input type="text" id="userInput" /></div>
         </div>
         <div class="row">
