--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -7,7 +7,7 @@
             <div class="col-4"><input type="text" id="userInput" /></div>
         </div>
         <div class="row">
-            <div class="col-2">Message</div>
+            <div class="col-2"><font color="blue">Message<//font></div>
             <div class="col-4"><input type="text" id="messageInput" /></div>
         </div>
         <div class="row">&nbsp;</div>
